# apidev

./: .gitignore  alembic.ini  example.env  main.py  pyproject.toml
app/: alembic.ini  main.py
app/auth/: auth.py  models.py  router.py
app/db/: database.py
app/migrations/: env.py
app/migrations/versions/: 4cf8bd77064a_add_unique_constraint.py  b29d55117e18_init.py
app/tests/: test_auth.py  test_authrouter.py  test_main.py
auth/: auth.py  models.py  router.py  test.py
db/: database.py
migrations/: env.py
migrations/versions/: 8083e750f3e7_add_is_superuser_field.py
